--- a/.github/workflows/ci-new2.yml
+++ b/.github/workflows/ci-new2.yml
@@ -79,16 +79,25 @@ jobs:
             --locked
 
       - name: Préparer cache SQLx si manquant
-        run: |
-          if [ ! -d ".sqlx" ]; then
-            echo "Cache SQLx manquant, génération..."
-            mkdir -p data
-            sqlite3 data/temp.db "VACUUM;"
-            cargo install sqlx-cli --no-default-features --features sqlite
-            DATABASE_URL="sqlite:data/temp.db" cargo sqlx prepare
-          else
-            echo "Cache SQLx présent ✓"
-          fi
+  run: |
+    if [ ! -d ".sqlx" ]; then
+      echo "Cache SQLx manquant, génération..."
+      # S'assurer que sqlx-cli est installé
+      cargo install sqlx-cli --no-default-features --features sqlite --locked 2>/dev/null || true
+      
+      # Créer et migrer la base de données
+      echo "Création de la base de données et application des migrations..."
+      DATABASE_URL="sqlite:data/temp.db" sqlx database create
+      DATABASE_URL="sqlite:data/temp.db" sqlx migrate run
+      
+      # Générer le cache maintenant que les tables existent
+      echo "Génération du cache SQLx..."
+      DATABASE_URL="sqlite:data/temp.db" cargo sqlx prepare -- --all-targets
+      
+      echo "✓ Cache généré avec succès"
+    else
+      echo "Cache SQLx présent ✓"
+    fi
 
       - name: Build avec mode offline
         env:
