--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,6 +15,7 @@ uuid = { version = "1.0", features = ["v4"] }
 futures-util = "0.3"
 tower-service = "0.3"
 http = "1.0"
+serde_urlencoded = "0.7"
 
 # 🔒 Fixes pour éviter edition2024
 home = "=0.5.11"
