--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "@sveltejs/adapter-static": "^3.0.5",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "vite": "^5.0.0",
-    "libsodium-wrappers": "^0.7.13"
+    "libsodium-wrappers": "^0.7.13",
     "simple-peer": "^9.11.1"
   }
 }
