--- a/frontend/static/manifest.json
+++ b/frontend/static/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4ade80",
-  "gcm_sender_id": "1234567890", // ← optionnel pour Firebase (non requis ici)
+  "gcm_sender_id": "1234567890",
   "icons": [
     { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
     { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" }
