--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,7 +17,8 @@ tower-service = "0.3"
 http = "1.0"
 serde_urlencoded = "0.7"
 reqwest = { version = "0.12", features = ["json"] }
-urlencoding = "2.1"
+urlencoding = "2.1",
+lettre = { version = "0.11", features = ["tokio1", "smtp-transport"] }
 
 # 🔒 Fixes pour éviter edition2024
 home = "=0.5.11"
