--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,8 @@
   "devDependencies": {
     "@sveltejs/kit": "^2.10.0",
     "svelte": "^5.0.0",
-    "@sveltejs/adapter-static": "^3.0.5",
-    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@sveltejs/adapter-static": "next",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
     "vite": "^5.0.0",
     "libsodium-wrappers": "^0.7.13",
     "simple-peer": "^9.11.1"
