--- a/.github/workflows/ci-new2.yml
+++ b/.github/workflows/ci-new2.yml
@@ -299,26 +299,36 @@ jobs:
             echo "cargo-audit non installé"
           fi
 
-  build-docker:
-    name: 🐳 Build Docker
+    build-docker:
+    name: 🐳 Build & Push Docker
     runs-on: ubuntu-latest
     needs: [build, test, frontend]
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
-    
+    permissions:
+      contents: read
+      packages: write  # ← nécessaire pour GHCR
+
     steps:
-      - name: Checkout du code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image (local only)
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: false
+          push: true
           tags: |
-            nook:latest
-            nook:${{ github.sha }}
+            ghcr.io/${{ github.repository }}/nook:latest
+            ghcr.io/${{ github.repository }}/nook:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
