--- a/.github/workflows/ci-new2.yml
+++ b/.github/workflows/ci-new2.yml
@@ -327,8 +327,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: |
-            ghcr.io/${{ github.repository }}/nook:latest
-            ghcr.io/${{ github.repository }}/nook:${{ github.sha }}
+            tags: |
+  ghcr.io/mx10-ac2n/nook:latest
+  ghcr.io/mx10-ac2n/nook:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
