--- a/.github/workflows/ci-new2.yml
+++ b/.github/workflows/ci-new2.yml
@@ -1,10 +1,11 @@
 name: CI-new2
 
 on:
-  push:
-    branches: [main, develop]
-  pull_request:
-    branches: [main, develop]
+  workflow_dispatch:
+# push:
+#   branches: [main, develop]
+# pull_request:
+#   branches: [main, develop]
 
 env:
   CARGO_TERM_COLOR: always
