--- a/.github/workflows/fast-build.yml
+++ b/.github/workflows/fast-build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout du code
         uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.branch || github.ref }}
+          ref: ${{ github.event.inputs.branch || github.ref }}
 
       - name: Installer Rust
         uses: dtolnay/rust-toolchain@stable
@@ -37,7 +37,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: \( {{ runner.os }}-cargo-release- \){{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-cargo-release-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-cargo-release-
             ${{ runner.os }}-cargo-
@@ -46,51 +46,54 @@ jobs:
         run: |
           mkdir -p data
           sqlite3 data/temp.db "VACUUM;"
-          chmod 666 data/temp.db
+          echo "Base de données temporaire créée"
 
-      - name: Installer sqlx-cli (seulement si nécessaire)
-        run: |
-          if [ ! -d ".sqlx" ]; then
-            cargo install sqlx-cli --version 0.8.6 --no-default-features --features sqlite --locked
-          fi
+      - name: Installer sqlx-cli
+        run: cargo install sqlx-cli --version 0.8.6 --no-default-features --features sqlite --locked
 
-      - name: Préparer cache SQLx si manquant
+      - name: Préparer cache SQLx
+        env:
+          DATABASE_URL: "sqlite:data/temp.db"
         run: |
-          if [ ! -d ".sqlx" ]; then
-            export DATABASE_URL="sqlite:data/temp.db"
-            if [ -d "migrations" ] && [ "$(ls -A migrations)" ]; then
-              sqlx migrate run
-            fi
-            cargo sqlx prepare -- --all-targets
+          # Exécuter les migrations si elles existent
+          if [ -d "migrations" ] && [ "$(ls -A migrations 2>/dev/null)" ]; then
+            sqlx migrate run
           fi
+          # Préparer le cache SQLx
+          cargo sqlx prepare -- --all-targets
 
       - name: Build Release (offline)
         env:
           SQLX_OFFLINE: true
         run: cargo build --release
 
+      - name: Vérifier le binaire
+        run: |
+          ls -la target/release/
+          if [ -f "target/release/backend" ]; then
+            echo "✅ Build réussi!"
+          else
+            echo "❌ Build échoué - binaire non trouvé"
+            exit 1
+          fi
+
   frontend-build:
     name: 🎨 Frontend
     runs-on: ubuntu-latest
+    needs: [backend-build]  # Optionnel: dépend du succès du backend
 
     steps:
       - name: Checkout du code
         uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.branch || github.ref }}
+          ref: ${{ github.event.inputs.branch || github.ref }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-
-      - name: Cache npm
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: \( {{ runner.os }}-node- \){{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
 
       - name: Installer dépendances frontend
         working-directory: ./frontend
@@ -99,3 +102,13 @@ jobs:
       - name: Build frontend
         working-directory: ./frontend
         run: npm run build
+
+      - name: Vérifier le build
+        working-directory: ./frontend
+        run: |
+          if [ -d "dist" ] || [ -d "build" ] || [ -d "out" ]; then
+            echo "✅ Build frontend réussi!"
+          else
+            echo "❌ Build frontend échoué - aucun répertoire de build trouvé"
+            exit 1
+          fi
