--- a/.github/workflows/ci-new2.yml
+++ b/.github/workflows/ci-new2.yml
@@ -301,7 +301,7 @@ jobs:
           fi
 
   build-docker:
-      - name: 🐳 Build & Push Docker
+  name: 🐳 Build & Push Docker
   runs-on: ubuntu-latest
   needs: [build, test, frontend]
   if: (github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')) || github.event_name == 'workflow_dispatch'
