--- a/.github/workflows/ci-new2.yml
+++ b/.github/workflows/ci-new2.yml
@@ -14,7 +14,7 @@ jobs:
   setup:
     name: 🔧 Configuration
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout du code
         uses: actions/checkout@v4
@@ -35,7 +35,7 @@ jobs:
     name: 🏗️ Construction Backend
     runs-on: ubuntu-latest
     needs: setup
-    
+
     defaults:
       run:
         working-directory: ./backend
@@ -107,7 +107,7 @@ jobs:
 
       - name: Build avec mode offline
         env:
-          SQLX_OFFLINE: true
+          SQLX_OFFLY: true
         run: cargo build --release
 
       - name: Build debug
@@ -117,7 +117,7 @@ jobs:
     name: 🧪 Tests
     runs-on: ubuntu-latest
     needs: build
-    
+
     defaults:
       run:
         working-directory: ./backend
@@ -153,7 +153,7 @@ jobs:
     name: 🎨 Frontend
     runs-on: ubuntu-latest
     needs: setup
-    
+
     steps:
       - name: Checkout du code
         uses: actions/checkout@v4
@@ -228,7 +228,7 @@ jobs:
     name: 📝 Lint et Formatage
     runs-on: ubuntu-latest
     needs: build
-    
+
     defaults:
       run:
         working-directory: ./backend
@@ -270,7 +270,7 @@ jobs:
     name: 🔒 Sécurité
     runs-on: ubuntu-latest
     needs: build
-    
+
     defaults:
       run:
         working-directory: ./backend
@@ -301,35 +301,35 @@ jobs:
           fi
 
   build-docker:
-  name: 🐳 Build & Push Docker
-  runs-on: ubuntu-latest
-  needs: [build, test, frontend]
-  if: (github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')) || github.event_name == 'workflow_dispatch'
-  permissions:
-    contents: read
-    packages: write
+    name: 🐳 Build & Push Docker
+    runs-on: ubuntu-latest
+    needs: [build, test, frontend]
+    if: (github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')) || github.event_name == 'workflow_dispatch'
+    permissions:
+      contents: read
+      packages: write
 
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Log in to GHCR
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build and push
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: |
-          ghcr.io/${{ github.repository }}/nook:latest
-          ghcr.io/${{ github.repository }}/nook:${{ github.sha }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository }}/nook:latest
+            ghcr.io/${{ github.repository }}/nook:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
