--- a/.github/workflows/fast-build.yml
+++ b/.github/workflows/fast-build.yml
@@ -1,45 +1,19 @@
-name: CI - Nook (Fast Build)
+name: 🚀 Fast Build & Push (Manual)
 
 on:
-  push:
-    branches: [main, develop]
-  pull_request:
-    branches: [main, develop]
-  workflow_dispatch:
+  workflow_dispatch:  # Déclenchement manuel uniquement
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  backend:
-    name: 🏗️ Backend
+  build-and-push:
+    name: 🐳 Build & Push Docker
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./backend
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Rust Toolchain
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Cache Cargo
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Build
-        run: cargo build --release
-
-  frontend:
-    name: 🎨 Frontend
-    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout
@@ -50,48 +24,28 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install dependencies
-        working-directory: ./frontend
-        run: npm ci
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
 
-      - name: Build
-        working-directory: ./frontend
-        run: npm run build
+      - name: Cache Cargo
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('backend/Cargo.lock') }}
 
-      - name: Lister fichiers après build
-        working-directory: ./frontend
-        run: |
-          echo "Contenu du dossier frontend après build :"
-          ls -la
-          if [ -d "build" ]; then
-            echo "Contenu de build/ :"
-            ls -la build/
-          else
-            echo "❌ ERREUR : build/ n'existe pas"
-            exit 1
-          fi
-
-      - name: ✅ Vérifier que build/ est généré
+      - name: Build frontend
         working-directory: ./frontend
         run: |
-          if [ ! -d "build" ]; then
-            echo "❌ ERREUR : le dossier 'build/' n'existe pas !"
-            ls -la
-            exit 1
-          fi
-          echo "✅ Le dossier 'build/' existe."
+          npm ci
+          npm run build
 
-  docker:
-    name: 🐳 Docker (Push vers GHCR)
-    runs-on: ubuntu-latest
-    needs: [backend, frontend]
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Build backend
+        working-directory: ./backend
+        run: |
+          cargo build --release
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -109,7 +63,7 @@ jobs:
           context: .
           push: true
           tags: |
+            ghcr.io/mx10-ac2n/nook:manual-${{ github.sha }}
             ghcr.io/mx10-ac2n/nook:latest
-            ghcr.io/mx10-ac2n/nook:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
