--- a/.github/workflows/fast-build.yml
+++ b/.github/workflows/fast-build.yml
@@ -7,22 +7,43 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build-and-push:
-    name: 🐳 Build & Push Docker
+  setup:
+    name: 🔧 Setup
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      packages: write
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+
+      - name: Cache Cargo
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+  backend:
+    name: 🏗️ Backend
+    runs-on: ubuntu-latest
+    needs: setup
+
+    defaults:
+      run:
+        working-directory: ./backend
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
@@ -34,44 +55,117 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('backend/Cargo.lock') }}
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Générer package-lock.json si absent
-  working-directory: ./frontend
-  run: |
-    if [ ! -f "package-lock.json" ]; then
-      echo "⚠️ package-lock.json absent, génération..."
-      npm install --package-lock-only
-      echo "✅ package-lock.json généré"
-    else
-      echo "✅ package-lock.json déjà présent"
-    fi
+      - name: Générer Cargo.lock
+        run: |
+          if [ ! -f "Cargo.lock" ]; then
+            cargo generate-lockfile
+          fi
 
-      - name: Installer dépendances (mode CI)
-  working-directory: ./frontend
-  run: npm ci
-      
-      - name: Build frontend
+      - name: Créer DB temporaire
+        run: |
+          mkdir -p data
+          sqlite3 data/temp.db "VACUUM;"
+
+      - name: Installer sqlx-cli
+        run: |
+          cargo install sqlx-cli --version 0.8.6 --no-default-features --features sqlite --locked
+
+      - name: Générer cache SQLx
+        env:
+          DATABASE_URL: "sqlite:data/temp.db"
+        run: |
+          if [ ! -d ".sqlx" ]; then
+            echo "Génération du cache SQLx..."
+            if [ -d "migrations" ] && [ "$(ls -A migrations 2>/dev/null)" ]; then
+              sqlx migrate run
+            else
+              sqlite3 data/temp.db "CREATE TABLE IF NOT EXISTS members (id TEXT PRIMARY KEY, name TEXT, approved BOOLEAN);"
+            fi
+            cargo sqlx prepare -- --all-targets
+          fi
+
+      - name: Build Release
+        env:
+          SQLX_OFFLINE: true
+        run: cargo build --release
+
+      - name: Vérifier binaire
+        run: |
+          if [ ! -f "target/release/nook-backend" ]; then
+            echo "❌ Binaire manquant"
+            exit 1
+          fi
+          echo "✅ Binaire généré"
+
+  frontend:
+    name: 🎨 Frontend
+    runs-on: ubuntu-latest
+    needs: setup
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Vérifier existence frontend/
+        run: |
+          if [ ! -d "frontend" ]; then
+            echo "❌ Dossier frontend absent"
+            exit 1
+          fi
+
+      - name: Générer package-lock.json
         working-directory: ./frontend
         run: |
-          npm run build
+          if [ ! -f "package-lock.json" ]; then
+            npm install --package-lock-only
+          fi
 
-      - name: Build backend
-        working-directory: ./backend
+      - name: Installer dépendances
+        working-directory: ./frontend
+        run: npm ci
+
+      - name: Build
+        working-directory: ./frontend
+        run: npm run build
+
+      - name: Vérifier build/
         run: |
-          cargo build --release
+          if [ ! -d "frontend/build" ]; then
+            echo "❌ Dossier build/ absent"
+            exit 1
+          fi
+          echo "✅ Dossier build/ OK"
 
-      - name: Set up Docker Buildx
+  docker:
+    name: 🐳 Build & Push
+    runs-on: ubuntu-latest
+    needs: [backend, frontend]
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GHCR
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build & Push
         uses: docker/build-push-action@v5
         with:
           context: .
