--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
     "vite": "^5.0.0",
     "libsodium-wrappers": "^0.7.13",
-    "simple-peer": "^9.11.1"
+    "simple-peer": "^9.11.1",
+    "@tsparticles/svelte": "^3.0.0",
+    "@tsparticles/slim": "^3.0.0",
+    "@tsparticles/shape-star": "^3.0.0"
   }
 }
