--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "libsodium-wrappers": "^0.7.13",
-    "simple-peer": "^9.11.1",
+    "simple-peer": "^9.11.1"
   },
   "devDependencies": {
-    "@sveltejs/kit": "^2.10.0",
-    "svelte": "^5.0.0",
     "@sveltejs/adapter-static": "^3.0.5",
+    "@sveltejs/kit": "^2.10.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+    "svelte": "^5.0.0",
     "vite": "^5.0.0"
   }
 }
