--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,6 +18,9 @@ http = "1.0"
 serde_urlencoded = "0.7"
 reqwest = { version = "0.12", features = ["json"] }
 urlencoding = "2.1"
+chrono = { version = "0.4", feature = ["serde"] }
+bcrypt = "0.15"
+headers = "0.3"
 lettre = { version = "0.11", default-features = false, features = [
     "tokio1",
     "tokio1-rustls",
