--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "libsodium-wrappers": "^0.7.13",
+    "chart.js": "^4.4.0",
     "simple-peer": "^9.11.1"
   },
   "devDependencies": {
