--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
   },
   "dependencies": {
     "libsodium-wrappers": "^0.7.13",
@@ -18,6 +20,10 @@
     "@sveltejs/kit": "^2.10.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
     "svelte": "^5.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "svelte-check": "^3.6.0",
+    "typescript": "^5.0.0",
+    "@types/libsodium-wrappers": "^0.7.13"
   }
 }
