--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
 uuid = { version = "1.0", features = ["v4"] }
+libsodium-sys = { version = "0.2", features = ["use-pkg-config"] }
 futures-util = "0.3"
 tower-service = "0.3"
 http = "1.0"
