--- a/.github/workflows/fast-build2.yml
+++ b/.github/workflows/fast-build2.yml
@@ -1,4 +1,4 @@
-name: 🚀 Fast Build & Push 2 (Manual)
+name: 🚀 Fast Build & Push (Manual)
 
 on:
   workflow_dispatch:  # Déclenchement manuel uniquement
@@ -8,9 +8,8 @@ on:
       - 'backend/**'
       - 'frontend/**'
       - 'Dockerfile'
-      - '.github/workflows/fast-build.yml'
+      - '.github/workflows/fast-build2.yml'
       - 'Cargo.lock'
-      - 'frontend/package-lock.json'
 
 env:
   CARGO_TERM_COLOR: always
@@ -37,8 +36,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
 
       - name: Cache Cargo
         uses: actions/cache@v4
@@ -59,15 +56,6 @@ jobs:
     defaults:
       run:
         working-directory: ./backend
-
-    services:
-      sqlite:
-        image: alpine:latest
-        ports: []
-        options: >-
-          --entrypoint /bin/sh
-          --name sqlite-service
-          alpine -c "apk add sqlite && tail -f /dev/null"
 
     steps:
       - name: Checkout
@@ -287,8 +275,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
 
       - name: Vérifier existence frontend/
         run: |
@@ -298,31 +284,72 @@ jobs:
           fi
           echo "✅ Dossier frontend trouvé"
 
+      - name: Installer npm globalement (si nécessaire)
+        run: |
+          npm install -g npm@latest || true
+
+      - name: Générer package-lock.json si absent
+        run: |
+          if [ ! -f "package-lock.json" ]; then
+            echo "🔄 Génération du package-lock.json..."
+            npm install --package-lock-only --no-audit --no-fund
+            echo "✅ package-lock.json généré"
+          else
+            echo "✅ package-lock.json déjà présent"
+          fi
+
+      - name: Cache npm dependencies
+        uses: actions/cache@v4
+        id: npm-cache
+        with:
+          path: |
+            node_modules
+            ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Installer dépendances
-        run: npm ci --no-audit --no-fund
+        run: |
+          if [ "${{ steps.npm-cache.outputs.cache-hit }}" != "true" ]; then
+            echo "🔄 Installation des dépendances npm..."
+            npm ci --no-audit --no-fund
+            echo "✅ Dépendances installées"
+          else
+            echo "✅ Dépendances récupérées depuis le cache"
+          fi
 
       - name: Vérifier dépendances critiques
         run: |
           REQUIRED_DEPS=(
             "svelte"
-            "sveltekit"
+            "@sveltejs/kit"
             "libsodium-wrappers"
             "uuid"
+            "svelte-navigator"
           )
           
+          MISSING_DEPS=()
+          
           for dep in "${REQUIRED_DEPS[@]}"; do
-            if ! npm list "$dep" --depth=0 --silent; then
+            if ! npm list "$dep" --depth=0 --silent >/dev/null 2>&1; then
               echo "⚠️ Dépendance manquante: $dep"
+              MISSING_DEPS+=("$dep")
             else
               echo "✅ $dep installé"
             fi
           done
-
-      - name: Lint
-        run: npm run lint
+          
+          if [ ${#MISSING_DEPS[@]} -gt 0 ]; then
+            echo "❌ Dépendances manquantes: ${MISSING_DEPS[*]}"
+            exit 1
+          fi
 
       - name: Build
-        run: npm run build
+        run: |
+          echo "🔄 Build du frontend..."
+          npm run build
+          echo "✅ Build frontend terminé"
 
       - name: Vérifier build/
         run: |
@@ -340,13 +367,21 @@ jobs:
             "_app/version.json"
           )
           
+          MISSING_FILES=()
+          
           for file in "${REQUIRED_FILES[@]}"; do
             if [ ! -f "$BUILD_DIR/$file" ]; then
               echo "❌ Fichier manquant: $BUILD_DIR/$file"
-              exit 1
+              MISSING_FILES+=("$file")
+            else
+              echo "✅ $file présent"
             fi
-            echo "✅ $file présent"
           done
+          
+          if [ ${#MISSING_FILES[@]} -gt 0 ]; then
+            echo "❌ Fichiers manquants dans le build: ${MISSING_FILES[*]}"
+            exit 1
+          fi
           
           echo "✅ Dossier $BUILD_DIR OK"
 
