--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,24 +8,34 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "libsodium-wrappers": "^0.7.13",
-    "uuid": "^9.0.0",
-    "svelte-navigator": "^3.0.0",
+    "@roxi/routify": "^4.0.0",
     "chart.js": "^4.4.0",
-    "simple-peer": "^9.11.1"
+    "libsodium-wrappers": "^0.7.13",
+    "simple-peer": "^9.11.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-static": "^3.0.5",
     "@sveltejs/kit": "^2.10.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+    "@types/libsodium-wrappers": "^0.7.13",
+    "@types/uuid": "^9.0.8",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-svelte": "^2.35.1",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.3",
     "svelte": "^5.0.0",
-    "vite": "^5.0.0",
-    "@sveltejs/adapter-auto": "^3.0.0",
     "svelte-check": "^3.6.0",
+    "tslib": "^2.6.2",
     "typescript": "^5.0.0",
-    "@types/libsodium-wrappers": "^0.7.13"
+    "vite": "^5.0.0"
   }
 }
