--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,9 @@
     "@types/libsodium-wrappers": "^0.7.13",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-svelte": "^2.35.1",
+    "eslint": "^9.39.2",
+    "eslint-plugin-svelte": "^3.12.1",
+    "svelte-eslint-parser": "^1.4.1",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.3",
